# Audio-VQVAE-for-JAX

./: .gitignore  .nojekyll  README.md  VQVAE.html  VQVAE.ipynb  VQVAE.py  copy_weights.ipynb  pyproject.toml  requirements.txt  train_vae.py  train_vqvae.py  vis_codebook.ipynb
assets/: bibtext.bibtex
vae/: __init__.py  models.py  trainer.py  utils.py
