[project]
name = "audio-vae-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "jax[cuda]>=0.5.0",
    "librosa>=0.10.2.post1",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "optax>=0.2.4",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
]
